# study_C

./: .gitignore  practice_char_1  practice_short_int_range_and_overflow
knou_lecture_c/: .gitignore  CMakeLists.txt  practice_char_1  practice_function_reference_param  practice_preprocessor_macro_funcion
knou_lecture_c/code/basic_practice/: disable_4996.c  practice_char_1.c  practice_enum_1.c  practice_function.c  practice_function_reference_param.c  practice_global_variable.c  practice_global_variable_2.c  practice_initialize_variable.c  practice_local_variable.c  practice_preprocessor_conditional.c  practice_preprocessor_macro_constant.c  practice_preprocessor_macro_funcion.c  practice_preprocessor_macro_function.c  practice_short_int_range_and_overflow.c  practice_variable_and_printf.c
knou_lecture_c/code/basic_practice/practice_storage_class/extern_storage_class/: p_external_file.c  p_main.c
knou_lecture_c/code/basic_practice/practice_storage_class/resister_storage_class/: p_register.c  p_register_2.c
knou_lecture_c/code/hello_world/: hello_world.c
knou_lecture_c/code/quiz/2024_03/: 01_gugudan.c  01_gugudan_function.c  02_cumulative_sum.c  02_cumulative_sum_function.c  03_do_while.c  04_loop.c  04_loop_comment.c  05_switch_to_if_answer.c  05_switch_to_if_quiz.c  06_if_score.c  07_string_length_fgets.c  07_string_length_scanf.c  test.c
knou_lecture_c/lecture_note/: lecture_2.txt  storage_class.txt
knou_lecture_c/ontact/2024_03_25/: memo.txt
