cmake_minimum_required(VERSION 3.27)
project(knou_lecture_c C)

set(CMAKE_C_STANDARD 11)

add_executable(code_basic_practice_practice_preprocessor_conditional code/basic_practice/practice_preprocessor_conditional.c)
add_executable(code_basic_practice_practice_variable_and_printf code/basic_practice/practice_variable_and_printf.c)
add_executable(code_basic_practice_practice_short_int_range_and_overflow code/basic_practice/practice_short_int_range_and_overflow.c)
add_executable(code_basic_practice_practice_preprocessor_macro_constant code/basic_practice/practice_preprocessor_macro_constant.c)
add_executable(code_basic_practice_practice_initialize_variable code/basic_practice/practice_initialize_variable.c)
add_executable(code_basic_practice_practice_global_variable code/basic_practice/practice_global_variable.c)
add_executable(code_basic_practice_practice_enum_1 code/basic_practice/practice_enum_1.c)
add_executable(code_basic_practice_practice_char_1 code/basic_practice/practice_char_1.c)
add_executable(code_basic_practice_practice_preprocessor_macro_function code/basic_practice/practice_preprocessor_macro_function.c)