cmake_minimum_required(VERSION 3.27)
project(knou_lecture_c C)

set(CMAKE_C_STANDARD 11)

add_executable(code_basic_practice_practice_preprocessor_conditional code/basic_practice/practice_preprocessor_conditional.c)
add_executable(code_basic_practice_practice_variable_and_printf code/basic_practice/practice_variable_and_printf.c)
add_executable(code_basic_practice_practice_short_int_range_and_overflow code/basic_practice/practice_short_int_range_and_overflow.c)
add_executable(code_basic_practice_practice_preprocessor_macro_constant code/basic_practice/practice_preprocessor_macro_constant.c)
add_executable(code_basic_practice_practice_initialize_variable code/basic_practice/practice_initialize_variable.c)
add_executable(code_basic_practice_practice_global_variable code/basic_practice/practice_global_variable.c)
add_executable(code_basic_practice_practice_enum_1 code/basic_practice/practice_enum_1.c)
add_executable(code_basic_practice_practice_char_1 code/basic_practice/practice_char_1.c)
add_executable(code_basic_practice_practice_preprocessor_macro_function code/basic_practice/practice_preprocessor_macro_function.c)
add_executable(code_basic_practice_practice_function code/basic_practice/practice_function.c)
add_executable(code_basic_practice_practice_function_reference_param code/basic_practice/practice_function_reference_param.c)
add_executable(code_basic_practice_practice_local_variable code/basic_practice/practice_local_variable.c)
add_executable(code_basic_practice_practice_global_variable_2 code/basic_practice/practice_global_variable_2.c)
add_executable(code_basic_practice_disable_4996 code/basic_practice/disable_4996.c)
add_executable(code_basic_practice_practice_extern_storage_class_p_main code/basic_practice/practice_storage_class/extern_storage_class/p_main.c
        code/basic_practice/practice_storage_class/extern_storage_class/p_external_file.c)
add_executable(code_basic_practice_practice_storage_class_resister_storage_class_p_resister code/basic_practice/practice_storage_class/resister_storage_class/p_register.c)
add_executable(code_basic_practice_practice_storage_class_resister_storage_class_p_register_2 code/basic_practice/practice_storage_class/resister_storage_class/p_register_2.c)
add_executable(code_quiz_2024_03_gugudan code/quiz/2024_03/01_gugudan.c)
add_executable(code_quiz_2024_03_gugudan_function code/quiz/2024_03/01_gugudan_function.c)
add_executable(code_quiz_2024_03_cumulative_sum code/quiz/2024_03/02_cumulative_sum.c)
add_executable(code_quiz_2024_03_cumulative_sum_function code/quiz/2024_03/02_cumulative_sum_function.c)
add_executable(code_quiz_2024_03_03_do code/quiz/2024_03/03_do_while.c)
add_executable(code_quiz_2024_03_04_loop code/quiz/2024_03/04_loop.c)
add_executable(code_quiz_2024_03_04_loop_comment code/quiz/2024_03/04_loop_comment.c)
add_executable(code_quiz_2024_03_05_switch_to_if code/quiz/2024_03/05_switch_to_if_quiz.c)
add_executable(code_quiz_2024_03_05_switch_to_if_answer code/quiz/2024_03/05_switch_to_if_answer.c)
add_executable(code_quiz_2024_03_test code/quiz/2024_03/test.c)
add_executable(code_quiz_2024_03_06_if_score code/quiz/2024_03/06_if_score.c)
add_executable(code_quiz_2024_03_07_string_length code/quiz/2024_03/07_string_length_fgets.c)
add_executable(code_quiz_2024_03_07_string_length_scanf code/quiz/2024_03/07_string_length_scanf.c)